feat: add way to resend email verification code
